<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="#BBBBD5"
        android:orientation="vertical"
        android:clickable="true">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal"
            android:paddingTop="5dp">
            <Button
                android:id="@+id/buttonQ"
                android:layout_width="30dp"
                android:layout_height="45dp"
                android:layout_marginRight="4dp"
                android:layout_weight="1"
                android:background="@drawable/button_background"
                android:padding="0dip"
                android:text="q" />

            <Button
                android:id="@+id/buttonW"
                android:layout_width="30dp"
                android:layout_height="45dp"
                android:layout_marginRight="4dp"
                android:layout_weight="1"
                android:background="@drawable/button_background"
                android:padding="0dip"
                android:text="w" />

            <Button
                android:id="@+id/buttonE"
                android:layout_width="30dp"
                android:layout_height="45dp"
                android:layout_marginRight="4dp"
                android:layout_weight="1"
                android:background="@drawable/button_background"
                android:padding="0dip"
                android:text="e" />

            <Button
                android:id="@+id/buttonR"
                android:layout_width="30dp"
                android:layout_height="45dp"
                android:layout_marginRight="4dp"
                android:layout_weight="1"
                android:background="@drawable/button_background"
                android:padding="0dip"
                android:text="r" />

            <Button
                android:id="@+id/buttonT"
                android:layout_width="30dp"
                android:layout_height="45dp"
                android:layout_marginRight="4dp"
                android:layout_weight="1"
                android:background="@drawable/button_background"
                android:padding="0dip"
                android:text="t" />

            <Button
                android:id="@+id/buttonY"
                android:layout_width="30dp"
                android:layout_height="45dp"
                android:layout_marginRight="4dp"
                android:layout_weight="1"
                android:background="@drawable/button_background"
                android:padding="0dip"
                android:text="y" />

            <Button
                android:id="@+id/buttonU"
                android:layout_width="30dp"
                android:layout_height="45dp"
                android:layout_marginRight="4dp"
                android:layout_weight="1"
                android:background="@drawable/button_background"
                android:padding="0dip"
                android:text="u" />

            <Button
                android:id="@+id/buttonI"
                android:layout_width="30dp"
                android:layout_height="45dp"
                android:layout_marginRight="4dp"
                android:layout_weight="1"
                android:background="@drawable/button_background"
                android:padding="0dip"
                android:text="i" />

            <Button
                android:id="@+id/buttonO"
                android:layout_width="30dp"
                android:layout_height="45dp"
                android:layout_marginRight="4dp"
                android:layout_weight="1"
                android:background="@drawable/button_background"
                android:padding="0dip"
                android:text="o" />

            <Button
                android:id="@+id/buttonP"
                android:layout_width="30dp"
                android:layout_height="45dp"
                android:layout_weight="1"
                android:background="@drawable/button_background"
                android:padding="0dip"
                android:text="p" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal"
            android:paddingTop="10dp">

            <Button
                android:id="@+id/buttonA"
                android:layout_width="30dp"
                android:layout_height="45dp"
                android:layout_marginRight="4dp"
                android:layout_weight="1"
                android:background="@drawable/button_background"
                android:padding="0dip"
                android:text="a" />

            <Button
                android:id="@+id/buttonS"
                android:layout_width="30dp"
                android:layout_height="45dp"
                android:layout_marginRight="4dp"
                android:layout_weight="1"
                android:background="@drawable/button_background"
                android:padding="0dip"
                android:text="s" />

            <Button
                android:id="@+id/buttonD"
                android:layout_width="30dp"
                android:layout_height="45dp"
                android:layout_marginRight="4dp"
                android:layout_weight="1"
                android:background="@drawable/button_background"
                android:padding="0dip"
                android:text="d" />

            <Button
                android:id="@+id/buttonF"
                android:layout_width="30dp"
                android:layout_height="45dp"
                android:layout_marginRight="4dp"
                android:layout_weight="1"
                android:background="@drawable/button_background"
                android:padding="0dip"
                android:text="f" />

            <Button
                android:id="@+id/buttonG"
                android:layout_width="30dp"
                android:layout_height="45dp"
                android:layout_marginRight="4dp"
                android:layout_weight="1"
                android:background="@drawable/button_background"
                android:padding="0dip"
                android:text="g" />

            <Button
                android:id="@+id/buttonH"
                android:layout_width="30dp"
                android:layout_height="45dp"
                android:layout_marginRight="4dp"
                android:layout_weight="1"
                android:background="@drawable/button_background"
                android:padding="0dip"
                android:text="h" />

            <Button
                android:id="@+id/buttonJ"
                android:layout_width="30dp"
                android:layout_height="45dp"
                android:layout_marginRight="4dp"
                android:layout_weight="1"
                android:background="@drawable/button_background"
                android:padding="0dip"
                android:text="j" />

            <Button
                android:id="@+id/buttonK"
                android:layout_width="30dp"
                android:layout_height="45dp"
                android:layout_marginRight="4dp"
                android:layout_weight="1"
                android:background="@drawable/button_background"
                android:padding="0dip"
                android:text="k" />

            <Button
                android:id="@+id/buttonL"
                android:layout_width="30dp"
                android:layout_height="45dp"
                android:layout_weight="1"
                android:background="@drawable/button_background"
                android:padding="0dip"
                android:text="l" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal"
            android:paddingTop="10dp">

            <Button
                android:id="@+id/buttonShift"
                android:layout_width="60dp"
                android:layout_height="45dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/special_button_background"
                android:padding="0dip"
                android:text="@string/Shift1" />

            <Button
                android:id="@+id/buttonZ"
                android:layout_width="30dp"
                android:layout_height="45dp"
                android:layout_marginRight="4dp"
                android:background="@drawable/button_background"
                android:padding="0dip"
                android:text="z" />

            <Button
                android:id="@+id/buttonX"
                android:layout_width="30dp"
                android:layout_height="45dp"
                android:layout_marginRight="4dp"
                android:background="@drawable/button_background"
                android:padding="0dip"
                android:text="x" />

            <Button
                android:id="@+id/buttonC"
                android:layout_width="30dp"
                android:layout_height="45dp"
                android:layout_marginRight="4dp"
                android:background="@drawable/button_background"
                android:padding="0dip"
                android:text="c" />

            <Button
                android:id="@+id/buttonV"
                android:layout_width="30dp"
                android:layout_height="45dp"
                android:layout_marginRight="4dp"
                android:background="@drawable/button_background"
                android:padding="0dip"
                android:text="v" />

            <Button
                android:id="@+id/buttonB"
                android:layout_width="30dp"
                android:layout_height="45dp"
                android:layout_marginRight="4dp"
                android:background="@drawable/button_background"
                android:padding="0dip"
                android:text="b" />

            <Button
                android:id="@+id/buttonN"
                android:layout_width="30dp"
                android:layout_height="45dp"
                android:layout_marginRight="4dp"
                android:background="@drawable/button_background"
                android:padding="0dip"
                android:text="n" />

            <Button
                android:id="@+id/buttonM"
                android:layout_width="30dp"
                android:layout_height="45dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/button_background"
                android:padding="0dip"
                android:text="m" />

            <Button
                android:id="@+id/buttonDel"
                android:layout_width="50dp"
                android:layout_height="45dp"
                android:background="@drawable/special_button_background"
                android:padding="0dip"
                android:text="@string/delete" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="366dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:paddingTop="10dp"
            android:paddingBottom="5dp">

            <Button
                android:id="@+id/buttonOther"
                android:layout_width="60dp"
                android:layout_height="45dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/special_button_background"
                android:text="@string/numbers" />

            <Button
                android:id="@+id/buttonCommon"
                android:layout_width="30dp"
                android:layout_height="45dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/button_background"
                android:text="," />

            <Button
                android:id="@+id/buttonSpace"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:background="@drawable/button_background"
                android:text="@string/space" />

            <Button
                android:id="@+id/buttonDot"
                android:layout_width="30dp"
                android:layout_height="45dp"
                android:layout_marginRight="4dp"
                android:background="@drawable/button_background"
                android:text="." />

            <Button
                android:id="@+id/buttonGo"
                android:layout_width="50dp"
                android:layout_height="45dp"

                android:layout_marginLeft="10dp"
                android:background="@drawable/button_go"
                android:text="@string/go" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>